--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^5.2.1",
+    "lucide-react": "^0.563.0",
     "next": "latest",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
