--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "express": "^5.2.1",
     "lucide-react": "^0.563.0",
+    "multer": "^2.0.2",
     "next": "latest",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-icons": "^5.5.0",
     "socket.io": "^4.8.3",
     "socket.io-client": "^4.8.3",
     "uuid": "^9.0.0"
